--- a/css/w3.css
+++ b/css/w3.css
@@ -250,3 +250,9 @@ pre {
     font-family: 'Ubuntu Condensed';
     src: url('/fonts/Ubuntu-C.ttf') format('truetype');
 }
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
